# aoc17

./: README.md  all-answers.sh  newday.sh  stack.yaml
day1/: day1.cabal
day1/src/: Day1.hs  Main.hs
day1/test/: Test1.hs
day10/: day10.cabal
day10/src/: Day10.hs  Main.hs
day10/test/: Test10.hs
day11/: day11.cabal
day11/src/: Day11.hs  Main.hs
day11/test/: Test11.hs
day12/: day12.cabal
day12/src/: Day12.hs  Main.hs
day12/test/: Test12.hs
day13/: day13.cabal
day13/src/: Day13.hs  Main.hs
day13/test/: Test13.hs
day14/: day14.cabal
day14/src/: Day14.hs  Main.hs
day14/test/: Test14.hs
day15/: day15.cabal
day15/src/: Day15.hs  Main.hs
day15/test/: Test15.hs
day16/: day16.cabal
day16/src/: Day16.hs  Main.hs
day16/test/: Test16.hs
day17/: day17.cabal
day17/src/: Day17.hs  Main.hs
day17/test/: Test17.hs
day18/: day18.cabal
day18/src/: Day18.hs  Main.hs
day18/test/: Test18.hs
day19/: day19.cabal
day19/src/: Day19.hs  Main.hs
day19/test/: Test19.hs
day2/: day2.cabal
day2/src/: Day2.hs  Main.hs
day2/test/: Test2.hs
day20/: day20.cabal
day20/src/: Day20.hs  Main.hs
day20/test/: Test20.hs
day21/: day21.cabal
day21/src/: Day21.hs  Main.hs
day21/test/: Test21.hs
day3/: day3.cabal
day3/src/: Day3.hs  Main.hs
day3/test/: Test3.hs
day4/: day4.cabal
day4/src/: Day4.hs  Main.hs
day4/test/: Test4.hs
day5/: day5.cabal
day5/src/: Day5.hs  Main.hs
day5/test/: Test5.hs
day6/: day6.cabal
day6/src/: Day6.hs  Main.hs
day6/test/: Test6.hs
day7/: day7.cabal
day7/src/: Day7.hs  Main.hs
day7/test/: Test7.hs
day8/: day8.cabal
day8/src/: Day8.hs  Main.hs
day8/test/: Test8.hs
day9/: day9.cabal
day9/src/: Day9.hs  Main.hs
day9/test/: Test9.hs
template/: dayn.cabal
template/src/: Dayn.hs  Main.hs
template/test/: Testn.hs
