name:                day14
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stillinbeta/aoc17#readme
license:             BSD3
author:              Liz Frost
maintainer:          web@stillinbeta.com
copyright:           BSD3
category:            Demo
build-type:          Simple
cabal-version:       >=1.10

executable day14
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Day14
  build-depends:       base >= 4.7 && < 5,
                       day10,
                       matrices == 0.4.*,
                       primitive == 0.6.*,
                       vector == 0.12.*

test-suite day14-test
  type:                exitcode-stdio-1.0
  main-is:             Test14.hs
  other-modules:       Day14
  hs-source-dirs:      test
                       src
  build-depends:       base >= 4.7 && < 5,
                       day10,
                       hspec == 2.*,
                       matrices == 0.4.*,
                       primitive == 0.6.*,
                       vector == 0.12.*
