name:                day20
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stillinbeta/aoc17#readme
license:             BSD3
author:              Liz Frost
maintainer:          web@stillinbeta.com
copyright:           BSD3
category:            Demo
build-type:          Simple
cabal-version:       >=1.10

executable day20
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Day20
  build-depends:       base >= 4.7 && < 5,
                       parsec == 3.1.*

test-suite day20-test
  type:                exitcode-stdio-1.0
  main-is:             Test20.hs
  other-modules:       Day20
  hs-source-dirs:      test
                       src
  build-depends:       base >= 4.7 && < 5,
                       hspec == 2.*,
                       parsec == 3.1.*
